exports[`test the subscription component matches the snapshot 1`] = `
<span>
  <img
    alt="Test is active"
    className="dVJUOs"
    src="test.jpg" />
  <img
    alt="Test2 is active"
    className="dVJUOs"
    src="test.jpg" />
  <img
    alt="Test3 is inactive"
    className="jNYDQB"
    src="test.jpg" />
  <img
    alt="Test4 is inactive"
    className="jNYDQB"
    src="test.jpg" />
</span>
`;

exports[`test the subscription component with plugins without active subscriptions using the default matches the snapshot 1`] = `
<span>
  <img
    alt="Test is inactive"
    className="jNYDQB"
    src="test.jpg" />
  <img
    alt="Test2 is inactive"
    className="jNYDQB"
    src="test.jpg" />
  <img
    alt="Test3 is inactive"
    className="jNYDQB"
    src="test.jpg" />
  <img
    alt="Test4 is inactive"
    className="jNYDQB"
    src="test.jpg" />
</span>
`;

exports[`test the subscription component without plugins or active subscriptions using the default matches the snapshot 1`] = `<span />`;

exports[`test the subscription component without plugins with active subscriptions using the default matches the snapshot 1`] = `<span />`;
